--- a/1.Planning.ipynb
+++ b/1.Planning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "3778f41d",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "a6bbef35",
    "metadata": {},
    "outputs": [
@@ -61,26 +61,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['A', 'E', 'G', 'I', 'J', 'D', 'H', 'C', 'B', 'F'] -> Fitness: -54\n",
-      "['J', 'C', 'E', 'I', 'A', 'D', 'B', 'F', 'G', 'H'] -> Fitness: -72\n",
-      "['F', 'G', 'D', 'I', 'A', 'E', 'J', 'H', 'B', 'C'] -> Fitness: -106\n",
-      "['E', 'F', 'C', 'G', 'B', 'D', 'A', 'J', 'I', 'H'] -> Fitness: -138\n",
-      "['E', 'F', 'D', 'H', 'G', 'B', 'A', 'J', 'C', 'I'] -> Fitness: -112\n",
-      "['C', 'A', 'J', 'D', 'G', 'I', 'H', 'F', 'B', 'E'] -> Fitness: -102\n",
-      "['H', 'C', 'G', 'J', 'A', 'I', 'B', 'E', 'D', 'F'] -> Fitness: -104\n",
-      "['E', 'F', 'I', 'G', 'H', 'A', 'B', 'D', 'C', 'J'] -> Fitness: -22\n",
-      "['J', 'E', 'I', 'H', 'C', 'D', 'G', 'F', 'A', 'B'] -> Fitness: -154\n",
-      "['D', 'B', 'H', 'I', 'E', 'C', 'J', 'A', 'F', 'G'] -> Fitness: -60\n",
-      "['D', 'H', 'B', 'C', 'A', 'F', 'J', 'E', 'G', 'I'] -> Fitness: -56\n",
-      "['I', 'E', 'F', 'C', 'A', 'J', 'G', 'B', 'D', 'H'] -> Fitness: -112\n",
-      "['J', 'A', 'H', 'E', 'B', 'D', 'I', 'C', 'F', 'G'] -> Fitness: -80\n",
-      "['B', 'A', 'E', 'D', 'G', 'F', 'C', 'J', 'I', 'H'] -> Fitness: -48\n",
-      "['F', 'A', 'D', 'E', 'B', 'J', 'H', 'G', 'C', 'I'] -> Fitness: -126\n",
-      "['C', 'A', 'J', 'E', 'B', 'D', 'I', 'F', 'H', 'G'] -> Fitness: -112\n",
-      "['E', 'I', 'J', 'D', 'G', 'B', 'H', 'A', 'F', 'C'] -> Fitness: -98\n",
-      "['F', 'B', 'A', 'E', 'H', 'D', 'G', 'C', 'I', 'J'] -> Fitness: -40\n",
-      "['C', 'J', 'A', 'I', 'E', 'F', 'D', 'B', 'G', 'H'] -> Fitness: -104\n",
-      "['G', 'F', 'A', 'I', 'J', 'C', 'E', 'B', 'D', 'H'] -> Fitness: -112\n"
+      "['G', 'B', 'A', 'F', 'I', 'D', 'J', 'C', 'E', 'H'] -> Fitness: -92\n",
+      "['I', 'H', 'A', 'C', 'D', 'E', 'F', 'G', 'J', 'B'] -> Fitness: -26\n",
+      "['G', 'I', 'E', 'C', 'A', 'B', 'D', 'F', 'H', 'J'] -> Fitness: -86\n",
+      "['J', 'I', 'E', 'C', 'A', 'H', 'G', 'D', 'B', 'F'] -> Fitness: -132\n",
+      "['C', 'H', 'G', 'B', 'E', 'F', 'A', 'I', 'D', 'J'] -> Fitness: -78\n",
+      "['D', 'E', 'J', 'I', 'B', 'A', 'C', 'F', 'H', 'G'] -> Fitness: -108\n",
+      "['A', 'B', 'H', 'I', 'D', 'J', 'G', 'F', 'C', 'E'] -> Fitness: -94\n",
+      "['D', 'B', 'J', 'H', 'F', 'A', 'C', 'G', 'I', 'E'] -> Fitness: -110\n",
+      "['E', 'G', 'B', 'H', 'C', 'I', 'A', 'F', 'D', 'J'] -> Fitness: -74\n",
+      "['G', 'H', 'I', 'E', 'C', 'D', 'A', 'F', 'B', 'J'] -> Fitness: -112\n",
+      "['G', 'B', 'E', 'D', 'C', 'J', 'A', 'F', 'H', 'I'] -> Fitness: -106\n",
+      "['J', 'C', 'E', 'A', 'I', 'F', 'D', 'B', 'H', 'G'] -> Fitness: -138\n",
+      "['H', 'C', 'F', 'B', 'G', 'I', 'E', 'J', 'A', 'D'] -> Fitness: -44\n",
+      "['A', 'I', 'D', 'C', 'E', 'B', 'J', 'H', 'F', 'G'] -> Fitness: -60\n",
+      "['G', 'D', 'F', 'B', 'C', 'A', 'J', 'E', 'H', 'I'] -> Fitness: -142\n",
+      "['B', 'H', 'C', 'J', 'I', 'D', 'A', 'F', 'E', 'G'] -> Fitness: -78\n",
+      "['D', 'I', 'J', 'E', 'C', 'G', 'H', 'F', 'B', 'A'] -> Fitness: -98\n",
+      "['A', 'G', 'J', 'C', 'F', 'D', 'B', 'H', 'E', 'I'] -> Fitness: -82\n",
+      "['B', 'I', 'A', 'H', 'F', 'D', 'J', 'G', 'C', 'E'] -> Fitness: -96\n",
+      "['D', 'B', 'C', 'I', 'E', 'H', 'G', 'F', 'J', 'A'] -> Fitness: -88\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "0def57a5",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "edbabe07",
    "metadata": {},
    "outputs": [
@@ -153,58 +153,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gen  1: ['A', 'B', 'H', 'I', 'E', 'C', 'J', 'D', 'F', 'G'] | Fitness: -6 | Válido: False\n",
-      "Gen  2: ['A', 'B', 'D', 'E', 'H', 'I', 'C', 'J', 'F', 'G'] | Fitness: -2 | Válido: False\n",
-      "Gen  3: ['A', 'D', 'H', 'I', 'C', 'B', 'E', 'J', 'F', 'G'] | Fitness: -2 | Válido: False\n",
-      "Gen  4: ['F', 'A', 'I', 'B', 'E', 'G', 'D', 'H', 'C', 'J'] | Fitness: -6 | Válido: False\n",
-      "Gen  5: ['B', 'I', 'A', 'E', 'C', 'D', 'F', 'J', 'G', 'H'] | Fitness: 8 | Válido: False\n",
-      "Gen  6: ['B', 'I', 'A', 'E', 'C', 'D', 'F', 'J', 'G', 'H'] | Fitness: 8 | Válido: False\n",
-      "Gen  7: ['A', 'I', 'B', 'E', 'C', 'D', 'F', 'G', 'H', 'J'] | Fitness: 34 | Válido: False\n",
-      "Gen  8: ['C', 'D', 'F', 'B', 'I', 'A', 'E', 'G', 'H', 'J'] | Fitness: 16 | Válido: False\n",
-      "Gen  9: ['C', 'D', 'F', 'B', 'I', 'A', 'E', 'G', 'H', 'J'] | Fitness: 16 | Válido: False\n",
-      "Gen 10: ['I', 'A', 'B', 'C', 'E', 'D', 'F', 'G', 'H', 'J'] | Fitness: 36 | Válido: False\n",
-      "Gen 11: ['A', 'B', 'C', 'E', 'D', 'F', 'I', 'G', 'H', 'J'] | Fitness: 74 | Válido: True\n",
-      "Gen 12: ['A', 'B', 'C', 'E', 'D', 'F', 'I', 'G', 'H', 'J'] | Fitness: 74 | Válido: True\n",
-      "Gen 13: ['A', 'C', 'B', 'D', 'F', 'E', 'I', 'G', 'H', 'J'] | Fitness: 76 | Válido: True\n",
-      "Gen 14: ['A', 'D', 'C', 'B', 'F', 'I', 'E', 'G', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 15: ['B', 'A', 'C', 'E', 'D', 'F', 'I', 'G', 'H', 'J'] | Fitness: 76 | Válido: True\n",
-      "Gen 16: ['A', 'B', 'E', 'C', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 76 | Válido: True\n",
-      "Gen 17: ['B', 'A', 'C', 'E', 'D', 'F', 'I', 'G', 'H', 'J'] | Fitness: 76 | Válido: True\n",
-      "Gen 18: ['B', 'A', 'C', 'D', 'E', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 19: ['B', 'A', 'C', 'D', 'E', 'F', 'I', 'G', 'H', 'J'] | Fitness: 76 | Válido: True\n",
-      "Gen 20: ['A', 'C', 'B', 'D', 'E', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 21: ['B', 'A', 'C', 'D', 'E', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 22: ['B', 'A', 'C', 'D', 'E', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 23: ['A', 'B', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 76 | Válido: True\n",
-      "Gen 24: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 25: ['B', 'A', 'C', 'D', 'F', 'E', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 26: ['B', 'A', 'E', 'D', 'C', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 27: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 28: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 29: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 30: ['B', 'A', 'C', 'D', 'E', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 31: ['B', 'A', 'D', 'E', 'C', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 32: ['B', 'A', 'C', 'D', 'F', 'E', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 33: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 34: ['B', 'A', 'D', 'C', 'E', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 35: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 36: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 37: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 38: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 39: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 40: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 41: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 42: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 43: ['B', 'A', 'C', 'D', 'E', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 44: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 45: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 46: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 47: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 48: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 49: ['B', 'A', 'C', 'D', 'E', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
-      "Gen 50: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J'] | Fitness: 78 | Válido: True\n",
+      "Gen  1: ['B', 'A', 'I', 'C', 'D', 'E', 'F', 'G', 'H', 'J'] | Fitness: 36 | Válido: False\n",
+      "Gen  2: ['B', 'I', 'A', 'C', 'D', 'E', 'F', 'G', 'H', 'J'] | Fitness: 38 | Válido: False\n",
+      "Gen  3: ['B', 'A', 'H', 'I', 'C', 'D', 'J', 'F', 'E', 'G'] | Fitness: -2 | Válido: False\n",
+      "Gen  4: ['I', 'A', 'C', 'B', 'E', 'D', 'F', 'H', 'J', 'G'] | Fitness: 2 | Válido: False\n",
+      "Gen  5: ['A', 'D', 'H', 'J', 'C', 'F', 'I', 'B', 'E', 'G'] | Fitness: 22 | Válido: False\n",
+      "Gen  6: ['H', 'A', 'D', 'J', 'C', 'F', 'I', 'B', 'E', 'G'] | Fitness: 22 | Válido: False\n",
+      "Gen  7: ['A', 'B', 'D', 'E', 'C', 'F', 'I', 'H', 'J', 'G'] | Fitness: 38 | Válido: False\n",
+      "Gen  8: ['A', 'D', 'C', 'B', 'E', 'H', 'F', 'I', 'J', 'G'] | Fitness: 38 | Válido: False\n",
+      "Gen  9: ['A', 'D', 'C', 'B', 'E', 'H', 'F', 'I', 'J', 'G'] | Fitness: 38 | Válido: False\n",
+      "Gen 10: ['A', 'B', 'D', 'E', 'C', 'H', 'F', 'I', 'J', 'G'] | Fitness: 34 | Válido: False\n",
+      "Gen 11: ['A', 'D', 'H', 'B', 'C', 'F', 'I', 'J', 'E', 'G'] | Fitness: 36 | Válido: False\n",
+      "Gen 12: ['A', 'H', 'B', 'D', 'C', 'F', 'I', 'J', 'E', 'G'] | Fitness: 32 | Válido: False\n",
+      "Gen 13: ['A', 'H', 'C', 'D', 'B', 'F', 'I', 'J', 'E', 'G'] | Fitness: 36 | Válido: False\n",
+      "Gen 14: ['A', 'D', 'H', 'C', 'F', 'B', 'I', 'J', 'E', 'G'] | Fitness: 40 | Válido: False\n",
+      "Gen 15: ['A', 'D', 'H', 'C', 'F', 'B', 'I', 'J', 'E', 'G'] | Fitness: 40 | Válido: False\n",
+      "Gen 16: ['A', 'D', 'H', 'C', 'F', 'B', 'I', 'J', 'E', 'G'] | Fitness: 40 | Válido: False\n",
+      "Gen 17: ['A', 'D', 'H', 'C', 'F', 'B', 'I', 'J', 'E', 'G'] | Fitness: 40 | Válido: False\n",
+      "Gen 18: ['A', 'H', 'D', 'C', 'F', 'I', 'J', 'B', 'E', 'G'] | Fitness: 46 | Válido: False\n",
+      "Gen 19: ['A', 'D', 'H', 'C', 'B', 'F', 'I', 'J', 'E', 'G'] | Fitness: 38 | Válido: False\n",
+      "Gen 20: ['A', 'D', 'H', 'C', 'F', 'B', 'I', 'J', 'E', 'G'] | Fitness: 40 | Válido: False\n",
+      "Gen 21: ['A', 'H', 'C', 'D', 'F', 'B', 'I', 'J', 'E', 'G'] | Fitness: 38 | Válido: False\n",
+      "Gen 22: ['A', 'D', 'H', 'C', 'B', 'F', 'I', 'J', 'E', 'G'] | Fitness: 38 | Válido: False\n",
+      "Gen 23: ['A', 'D', 'C', 'H', 'F', 'B', 'I', 'J', 'E', 'G'] | Fitness: 42 | Válido: False\n",
+      "Gen 24: ['A', 'D', 'C', 'H', 'F', 'B', 'I', 'J', 'E', 'G'] | Fitness: 42 | Válido: False\n",
+      "Gen 25: ['A', 'D', 'C', 'F', 'B', 'I', 'H', 'J', 'E', 'G'] | Fitness: 46 | Válido: False\n",
+      "Gen 26: ['A', 'D', 'C', 'F', 'I', 'H', 'B', 'J', 'E', 'G'] | Fitness: 48 | Válido: False\n",
+      "Gen 27: ['A', 'D', 'C', 'F', 'I', 'H', 'B', 'J', 'E', 'G'] | Fitness: 48 | Válido: False\n",
+      "Gen 28: ['A', 'D', 'C', 'F', 'I', 'H', 'B', 'J', 'E', 'G'] | Fitness: 48 | Válido: False\n",
+      "Gen 29: ['A', 'D', 'C', 'F', 'I', 'H', 'B', 'J', 'E', 'G'] | Fitness: 48 | Válido: False\n",
+      "Gen 30: ['A', 'D', 'C', 'F', 'I', 'H', 'B', 'J', 'E', 'G'] | Fitness: 48 | Válido: False\n",
+      "Gen 31: ['A', 'D', 'C', 'F', 'I', 'H', 'B', 'J', 'E', 'G'] | Fitness: 48 | Válido: False\n",
+      "Gen 32: ['A', 'D', 'C', 'F', 'I', 'H', 'B', 'J', 'E', 'G'] | Fitness: 48 | Válido: False\n",
+      "Gen 33: ['A', 'D', 'C', 'F', 'I', 'H', 'J', 'B', 'E', 'G'] | Fitness: 54 | Válido: False\n",
+      "Gen 34: ['A', 'D', 'C', 'F', 'I', 'H', 'J', 'B', 'E', 'G'] | Fitness: 54 | Válido: False\n",
+      "Gen 35: ['A', 'D', 'C', 'F', 'I', 'H', 'J', 'B', 'E', 'G'] | Fitness: 54 | Válido: False\n",
+      "Gen 36: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 37: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'J', 'B', 'E'] | Fitness: 60 | Válido: False\n",
+      "Gen 38: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 39: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'J', 'B', 'E'] | Fitness: 60 | Válido: False\n",
+      "Gen 40: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'J', 'B', 'E'] | Fitness: 60 | Válido: False\n",
+      "Gen 41: ['A', 'D', 'C', 'F', 'I', 'G', 'H', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 42: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 43: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 44: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 45: ['A', 'D', 'C', 'F', 'I', 'G', 'H', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 46: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 47: ['A', 'D', 'C', 'F', 'G', 'H', 'I', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 48: ['A', 'D', 'C', 'F', 'I', 'G', 'H', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 49: ['A', 'D', 'C', 'F', 'I', 'G', 'H', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
+      "Gen 50: ['A', 'D', 'C', 'F', 'G', 'I', 'H', 'B', 'J', 'E'] | Fitness: 54 | Válido: False\n",
       "\n",
-      "Mejor solución encontrada: ['B', 'A', 'C', 'E', 'D', 'F', 'G', 'I', 'H', 'J']\n"
+      "Mejor solución encontrada: ['A', 'D', 'C', 'F', 'G', 'I', 'H', 'B', 'J', 'E']\n"
      ]
     }
    ],
