--- a/2.Maze_problem.ipynb
+++ b/2.Maze_problem.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 66,
+      "execution_count": 121,
       "metadata": {
         "id": "xoZn6b-uZt8r"
       },
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 67,
+      "execution_count": 122,
       "metadata": {
         "id": "4Rahk-56Z9jq"
       },
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 68,
+      "execution_count": 123,
       "metadata": {
         "id": "7B4dgvTgaBhf"
       },
@@ -73,15 +73,17 @@
         "    x, y = next_state\n",
         "    terrain = maze[x][y]\n",
         "    if terrain == \"~\":\n",
-        "        return 5\n",
+        "        return 3  # Barro\n",
+        "    elif terrain == \"^\":\n",
+        "        return 5  # Fuego\n",
         "    elif terrain == \"#\":\n",
-        "        return 3\n",
+        "        return float('inf')  # Pared (intransitable)\n",
         "    else:\n",
-        "        return 1\n",
+        "        return 1  # Camino normal\n",
         "\n",
         "def find_exit(maze):\n",
         "    start = (1, 1)\n",
-        "    goal = (1, 6)\n",
+        "    goal = (1, 18)\n",
         "    problem = Problem(maze, start, goal)\n",
         "\n",
         "    def manhattan_distance(pos, goal):\n",
@@ -112,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": 124,
       "metadata": {
         "id": "nr1f-OMmaPZy"
       },
@@ -124,12 +126,22 @@
         "        path.append(node.position)\n",
         "        node = node.parent\n",
         "    path.reverse()\n",
-        "    return path\n"
+        "    return path\n",
+        "def calculate_total_cost(path, maze):\n",
+        "    total = 0\n",
+        "    for i in range(len(path) - 1):\n",
+        "        current = path[i]\n",
+        "        next_pos = path[i + 1]\n",
+        "        move = (next_pos[0] - current[0], next_pos[1] - current[1])\n",
+        "        cost = action_cost(current, move, next_pos)\n",
+        "        total += cost\n",
+        "    return total\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": 125,
       "metadata": {
         "id": "goDWZANwaRuK"
       },
@@ -138,23 +150,40 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Path to exit: [(1, 1), (1, 2), (2, 2), (3, 2), (3, 3), (3, 4), (3, 5), (2, 5), (1, 5), (1, 6)]\n"
+            "Path to exit: [(1, 1), (1, 2), (1, 3), (1, 4), (1, 5), (1, 6), (1, 7), (1, 8), (1, 9), (1, 10), (1, 11), (1, 12), (1, 13), (1, 14), (1, 15), (1, 16), (1, 17), (1, 18)]\n",
+            "Total cost of path: 19\n"
           ]
         }
       ],
       "source": [
-        "# ✅ Laberinto\n",
+        "# ✅ maze\n",
         "maze = [\n",
-        "    [\"#\", \"#\", \"#\", \"#\", \"#\", \"#\", \"#\", \"#\", \"#\"],\n",
-        "    [\"#\", \"S\", \" \", \"~\", \"#\", \" \", \" \", \"~\", \"#\"],\n",
-        "    [\"#\", \"#\", \" \", \"#\", \"#\", \" \", \"#\", \" \", \"#\"],\n",
-        "    [\"#\", \" \", \" \", \" \", \"~\", \" \", \"#\", \"E\", \"#\"],\n",
-        "    [\"#\", \"#\", \"#\", \"#\", \"#\", \"#\", \"#\", \"#\", \"#\"]\n",
+        "    ['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#'],\n",
+        "    ['#', 'S', '.', '.', '.', '~', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', 'E', '#'],\n",
+        "    ['#', '#', '#', '#', '.', '#', '#', '#', '#', '.', '#', '#', '#', '#', '#', '#', '#', '.', '#', '#'],\n",
+        "    ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
+        "    ['#', '.', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '.', '#'],\n",
+        "    ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
+        "    ['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#'],\n",
+        "    ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
+        "    ['#', '.', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '.', '#'],\n",
+        "    ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
+        "    ['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#'],\n",
+        "    ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
+        "    ['#', '.', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '.', '#'],\n",
+        "    ['#', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '.', '#'],\n",
+        "    ['#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#', '#']\n",
         "]\n",
+        "\n",
         "\n",
         "# ✅ Ejecutar\n",
         "path = find_exit(maze)\n",
-        "print(\"Path to exit:\", path)"
+        "print(\"Path to exit:\", path)\n",
+        "if path:\n",
+        "    total_cost = calculate_total_cost(path, maze)\n",
+        "    print(\"Total cost of path:\", total_cost)\n",
+        "else:\n",
+        "    print(\"No path found.\")\n"
       ]
     }
   ],
